<resources>
    <string name="app_name">AlumnosDB App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="alumnos">Gestion de Alumnos</string>
    <string name="lista">Listado de Alumnos</string>
    <string name="encabezado">Aplicacion Base de  Dato sqllife</string>
    <string name="nombre_alumno">Jose Lopez Acosta</string>
    <string name="carrera"> Ing. de Software</string>
    <string name="materia">Programación Móvil</string>
    <string name="universidad">UadeO</string>
    <string name="correo">Micorreo@gmail.com</string>
    <string name="matricula">50220323</string>
</resources>